--- a/css/menu.css
+++ b/css/menu.css
@@ -1,10 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
-  font-family: "Poppins", sans-serif;
 }
 .droparrow {
   position: relative;
@@ -63,6 +61,7 @@ nav .content .links {
   padding: 9px 17px;
   border-radius: 5px;
   transition: all 0.3s ease;
+  font-family: Dosis;
 
 }
 .content .links li label {
