--- a/css/menu.css
+++ b/css/menu.css
@@ -182,7 +182,7 @@ nav .content .links {
 @media screen and (max-width: 1250px) {
   .wrapperall nav {
     max-width: 100%;
-    padding: 0 20px;
+    padding: 0 0px;
   }
   nav .content .links {
     margin-left: 30px;
@@ -217,6 +217,7 @@ nav .content .links {
 }
   .logo{
       display: block;
+      margin: auto;
   }
   .data{
       display: unset;
@@ -259,7 +260,8 @@ nav .content .links {
     visibility: visible;
     /* margin-top: 50px; */
     background: #026eb3;
-    top: 15.3%;
+    top:     14.1%;
+
 
 
   }
